--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.cedarsoftware</groupId>
+            <artifactId>json-io</artifactId>
+            <version>4.13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
